# ggap

./: .hgignore  BUILD.NOTES  CHECKLIST  ChangeLog  INSTALL  Makefile.am  Makefile.ug  README  README.CVS  THANKS  TODO  acinclude.m4  autogen.sh  config.py.in  configure.ac  cygwin-configure  gap.xml  ggap-script-tmpl  ggap.desktop  ggap.kdevelop  ggap.mprj  ggap.proj  ggap.sh  makewin  makewin-release  mingw-configure  moo-debug.h  moo-macros.h  moo-pimpl.h  moo-unit-tests.h
contrib/: Makefile.am  Makefile.ug
contrib/qxt/: README  qxtcommandoptions.cpp
contrib/zip/: zip.h
devcpp/: before.mak  ggap.dev
doc/: index.py  parser.py  syms.py
gap/: Makefile.am  PackageInfo.g.in  ggap.gd  ggap.gi  init.g.in
ggap/: Makefile.am  Makefile.ug  about.ui  addbookmark.ui  app.cpp  app.h  appwindow.cpp  appwindow.h  dialogs.cpp  dialogs.h  editdirlist.ui  gap-p.h  gap-script.c  gap-script.h  gap-widgets.c  gap-widgets.h  gap.c  gap.cpp  gap.h  gap.qrc  gapapp-script.c  gapapp-script.h  gapapp.c  gapapp.h  gapdoc.c  gapdoc.cpp  gapdoc.h  gapdocwindow.c  gapdocwindow.h  gapeditwindow.c  gapeditwindow.h  gapoutput.c  gapoutput.h  gapparser-priv.h  gapparser-yacc.c  gapparser-yacc.h  gapparser-yacc.y  gapparser.c  gapparser.h  gapprocess.c  (+92 more)
ggap/gap/: Makefile.am  Makefile.incl  PackageInfo.g.in  ggap-init.g.in  ggap-restore.g  help.g  init.g.in  last.g  read.g  restore.g  screen.g
ggap/gap-gtk/: gap.c  gapoutput.h  gapparser.h  gapsession.h  gaptermwindow.c  gapview.c  gapview.h  gapwindow.c  gapwswindow.h  ggap.c  ggap_res.rc.in  mooworksheet.h  pipehelper.c  pipehelper.h  pipehelper_res.rc.in  testparser.c
ggap/gap-gtk/gap/: Makefile.am  init.g.in
ggap/gap-gtk/gap/doc/: Makefile.am
ggap/gap-gtk/gap/gap/: ggap.gi  gobject.gd  io.gd  override.gi  types.gi  utils.gd
ggap/gap-gtk/gap/tst/demo/: filechooser.g  message.g
ggap/gap-gtk/gap/tst/glade/: file1.glade
ggap/gap-gtk/python/: gap.py  gap_cb.py
ggap/gap/doc/: Makefile.am  genmsk.py  manual.msk  types.msk
ggap/gap/gap/: codegen.py  defs.py  ggap.gd  ggap.gi  gobject.gd  gobject.gi  graph.gd  graph.gi  gtktypes.py  io.gd  io.gi  override.gd  override.gi  types.gd  types.gi  types.py  utils.gd  utils.gi
ggap/gap/ggap/gap/: types.py
ggap/gap/lib/: ggap.gi  globals.g
ggap/gap/tst/: demo.g  testglade.g  treemodel.g
ggap/gap/tst/demo/: entries.g
ggap/gap/tst/glade/: demo.glade  file1.glade
ggap/glade/: gapdoc.glade  gapprefs.glade  gapwsprefs.glade  usermenu.glade
ggap/help/: prefsdialog.html
ggap/icons/ggap/: ggap.icns  gwp.icns  gws.icns
ggap/moocanvas/: moocanvas.c  moocanvas.h  moocanvasbox.c  moocanvasbox.h  moocanvasgraph.c  moocanvasgraph.h  moocanvasitem.c  moocanvasitem.h  moocanvasline.c  moocanvasline.h  moocanvastext.c  moocanvastext.h  moocanvaswindow.c  moocanvaswindow.h
ggap/mooui/: Makefile.am  marshals.list  mdapp.c  mdapp.h  mdappinput.c  mdappinput.h  mdappwindow.c  mdappwindow.h  mdasyncop.c  mdasyncop.h  mddialogs.c  mddialogs.h  mddocument-private.h  mddocument.c  mddocument.h  mdfileop.c  mdfileop.h  mdmanager-private.h  mdmanager.c  mdmanager.h  mdtypes.h  mdutils.c  mdutils.h  mdview-private.h  mdview.c  mdview.h  mdwindow-private.h  mdwindow.c  mdwindow.h  testui.c
ggap/moows/: Makefile.am  mooworksheet.c  mooworksheet.h  moows-draw.c  moows-draw.h  moows-file.c  moows-file.h  moows-input.c  moows-input.h  moows-private.h  moowsblock.c  moowsblock.h  moowsbuffer.c  moowsbuffer.h  moowspromptblock.c  moowspromptblock.h  moowstextblock.c  moowstextblock.h  moowsview.c  moowsview.h  testws.c
ggap/python/: gap.py  gap_canvas.py  gap_cb.py  gap_types.py  ggap.py
help/: Makefile.am  ggap.docbook
m4/: moo-pch.m4  moo-qt.m4
mac/: Info.plist.in  Makefile.incl  README  qt.conf
mk/: macapp.mk  moc.mk  pch.mk  pre.mk  qrc.mk  qt.mk  rc.mk  ugly  ugly-post.mk  ugly-pre.mk  ugly-top.mk  uic.mk  yacc.mk
moo-newdoc/mooui/: Makefile.am  marshals.list  mdaccels.h  mdasyncop.c  mdasyncop.h  mddialogs.c  mddialogs.h  mddocument-private.h  mddocument.c  mddocument.h  mdenums.c  mdenums.h  mdfileops.c  mdfileops.h  mdmanager-private.h  mdmanager.c  mdmanager.h  mdprefs.h  mdtypes.h  mdutils.c  mdutils.h  mdwindow-private.h  mdwindow.c  mdwindow.h
moo-newdoc/mooui/glade/: mdopenuri.glade  mdpasswddlg.glade  mdsavemult.glade
moows/: Makefile.am  Makefile.ug  colorcombobox.cpp  colorcombobox.h  common.h  worksheet-draw.cpp  worksheet-file.cpp  worksheet-format-p.h  worksheet-format.cpp  worksheet-input.cpp  worksheet-xml-p.h  worksheet-xml.cpp  worksheet-xml.h  worksheet.cpp  worksheet.h  worksheet_p.h  wsblock-format.h  wsblock.cpp  wsblock.h  wsblock_p.h  wsblockformat.h  wstextblock.cpp  wstextblock.h  wstextdocument-p.h  wstextdocument.cpp  wstextdocument.h  wstextdocument_p.h
pkg/: Makefile.am  PackageInfo.g.in  ggap.gd  ggap.gi  init.g.in
pkg/ggap/: PackageInfo.g.in  alias.g  ggap.gd  ggap.gi  gobject.gd  gobject.gi  init.g.in  read.g  widgets.gd  widgets.gi
pkg/ggap/gap/: ggap.gd  ggap.gi  gobject.gd  gobject.gi  widgets.gd  widgets.gi
pkg/ggap/tst/: demo.g  file1.glade  file2.glade  testglade.g  testgui.g
pkg/ggap/tst/glade/: demo.glade
pkg/gui/: PackageInfo.g.in  init.g.in  read.g
po/: POTFILES.in  POTFILES.skip  maintain  ru.po
scripts/: ggap-full.sh  ggap.sh  prepare.sh
src/: Makefile.am  ggap_res.rc.in  main.cpp
src/gap/: Makefile.am  gap.c  gap.h  gapapp-pygtk.c  gapapp-pygtk.defs  gapapp-pygtk.override  gapapp.c  gapapp.h  gapeditwindow.c  gapeditwindow.h  gapoutchannel.c  gapoutchannel.h  gapprefs.h  gapprefsdialog.c  gapprefsdialog.h  gaptermwindow.c  gaptermwindow.h  gapui.xml
src/gap/glade/: Makefile.am  gapprefs.c  gapprefs.glade  gapprefs.gladep  gapprefs.sed
src/generic/: Makefile.am
src/sc3/: Makefile.am  sc3app-pygtk.defs  sc3app-pygtk.override  sc3app.cpp  sc3app.h  sc3editwindow.c  sc3editwindow.h  sc3prefs.h  sc3prefsdialog.c  sc3prefsdialog.h  sc3termwindow.c  sc3termwindow.h  sc3ui.xml
src/sc3/glade/: Makefile.am  callbacks.c  sc3prefs.c  sc3prefs.glade  sc3prefs.gladep  sc3prefs.sed
templates/: c  cpp  g  h
win32/: Makefile.incl  (+4 more)
(+22 files in other folders)
