ggap_pkgdir = ${GGAP_GAP_DIR}/ggap
ggap_pkggapdir = ${GGAP_GAP_DIR}/ggap/gap

ggap_pkg_DATA =			\
	ggap/PackageInfo.g	\
	ggap/init.g		\
	ggap/read.g

ggap_pkggap_DATA =		\
	ggap/gap/ggap.gd	\
	ggap/gap/ggap.gi	\
	ggap/gap/gobject.gd	\
	ggap/gap/gobject.gi	\
	ggap/gap/widgets.gd	\
	ggap/gap/widgets.gi

EXTRA_DIST =			\
	$(ggap_pkg_DATA)	\
	$(ggap_pkggap_DATA)
