ggap_pkgdir = ${GGAP_GAP_DIR}/ggap
ggap_pkg_gapdir = ${GGAP_GAP_DIR}/ggap/gap
ggap_pkg_tstdir = ${GGAP_GAP_DIR}/ggap/tst

ggap_pkg_DATA =			\
	ggap/PackageInfo.g	\
	ggap/init.g		\
	ggap/read.g

ggap_pkg_gap_DATA =		\
	ggap/gap/ggap.gd	\
	ggap/gap/ggap.gi	\
	ggap/gap/gobject.gd	\
	ggap/gap/gobject.gi	\
	ggap/gap/widgets.gd	\
	ggap/gap/widgets.gi

ggap_pkg_tst_DATA =		\
	ggap/tst/testglade.g	\
	ggap/tst/testgui.g	\
	ggap/tst/file1.glade	\
	ggap/tst/file2.glade

EXTRA_DIST =			\
	$(ggap_pkg_DATA)	\
	$(ggap_pkg_gap_DATA)	\
	$(ggap_pkg_tst_DATA)
