ggap_pkgdir = ${GGAP_GAP_DIR}/ggap
ggap_pkg_gapdir = ${GGAP_GAP_DIR}/ggap/gap
ggap_pkg_tstdir = ${GGAP_GAP_DIR}/ggap/tst
ggap_pkg_tst_gladedir = ${GGAP_GAP_DIR}/ggap/tst/glade
ggap_pkg_tst_demodir = ${GGAP_GAP_DIR}/ggap/tst/demo

ggap_pkg_DATA =				\
	ggap/PackageInfo.g		\
	ggap/init.g			\
	ggap/read.g

ggap_pkg_gap_DATA =			\
	ggap/gap/ggap.gd		\
	ggap/gap/ggap.gi		\
	ggap/gap/gobject.gd		\
	ggap/gap/gobject.gi		\
	ggap/gap/widgets.gd		\
	ggap/gap/widgets.gi

ggap_pkg_tst_DATA =			\
	ggap/tst/demo.g			\
	ggap/tst/testglade.g

ggap_pkg_tst_glade_DATA =		\
	ggap/tst/glade/demo.glade	\
	ggap/tst/glade/file1.glade

ggap_pkg_tst_demo_DATA =		\
	ggap/tst/demo/message.g

EXTRA_DIST =				\
	$(ggap_pkg_DATA)		\
	$(ggap_pkg_gap_DATA)		\
	$(ggap_pkg_tst_DATA)		\
	$(ggap_pkg_tst_glade_DATA)	\
	$(ggap_pkg_tst_demo_DATA)
